--- a/src/components/HomeComponents/Footer/Footer.css
+++ b/src/components/HomeComponents/Footer/Footer.css
@@ -18,7 +18,7 @@
     }
 
     .Footer-query-section__info {
-        padding: 0 0 0 10px;
+        padding: 0 0 0 25px;
     }
     
     .Footer-query-section__content {
@@ -73,7 +73,7 @@
     .Footer-query-section__phoneNumber {
         text-align: left;
         font-style: Regular;
-        font-size: 20px;
+        font-size: 16px;
         font-family: Poppins;
         letter-spacing: 0.9px;
         color: #424242;
@@ -179,7 +179,7 @@
         text-decoration: none;
         text-align: left;
         font-weight: bold;
-        font-size: 11px;
+        font-size: 12px;
         font-family: Montserrat;
         letter-spacing: 1.2px;
         color: #424242;
@@ -256,10 +256,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-weight: Medium;
+        font-weight: 600;
         font-size: 14px;
         font-family: Montserrat;
-        color: #000000;
+        color: gray;
         padding: 10px 0;
     }
 
