--- a/src/components/HomeComponents/Technologies/Technologies.css
+++ b/src/components/HomeComponents/Technologies/Technologies.css
@@ -123,10 +123,10 @@
         background: #8D6E63 0% 0% no-repeat padding-box;
         border-radius: 29px;
         opacity: 1;
-        padding: 10px 40px;
+        padding: 8px 25px;
         text-align: center;
         font-weight: bold;
-        font-size: 16px;
+        font-size: 12px;
         font-family: Montserrat;
         letter-spacing: 0px;
         color: #ffffff;
