--- a/src/components/ProductComponents/ProductPricing/ProductPricing.css
+++ b/src/components/ProductComponents/ProductPricing/ProductPricing.css
@@ -110,7 +110,10 @@
     }
     
     .ProductPricing-content {
-        padding: 0 0 0 25px;
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 0 0 10px;
     }
     
     .ProductPricing-image {
@@ -122,16 +125,18 @@
     .ProductPricing-name {
         text-align: left;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 10px;
         font-family: Montserrat;
+        margin: 0 0 5px 0;
     }
     
     .ProductPricing-quantity {
         text-align: left;
         font-weight: bold;
-        font-size: 11px;
+        font-size: 10px;
         font-family: Montserrat;
         color: #bd2c36;
+        margin: 0 0 5px 0;
     }
     
     .ProductPricing-description {
@@ -139,6 +144,7 @@
         font-weight: Medium;
         font-size: 9px;
         font-family: Montserrat;
+        margin: 0 0 5px 0;
     }
     
     .ProductPricing-cart-options {
@@ -147,6 +153,7 @@
     }
     
     .ProductPricing-addToCartButton {
+        white-space: nowrap;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -213,7 +220,7 @@
         margin: 0;
         text-align: center;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 10px;
         font-family: Montserrat;
         letter-spacing: 1.2px;
         color: #bd2c36;
